--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -1,9 +1,9 @@
 <div class="ui stackable grid">
-    <div class="right floated right aligned two wide column" style="margin-right:50px;">
-<label class="switch" {{action 'togglePreview'}}   data-tooltip="Toggle Preview" data-position="left center" >
-  <input type="checkbox" class="checkswitch" checked>
-  <span class="slider round"></span>
-</label>
+    <div class="right floated right aligned two wide column" >
+   <label class="switch" {{action 'togglePreview'}}   data-tooltip="Toggle Preview" data-position="left center" >
+   <input type="checkbox" class="checkswitch" checked>
+   <span class="slider round"></span>
+   </label>
 
     </div>
 </div>
