--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -5,6 +5,9 @@
         </button>
     </div>
 </div>
+{{!----Event Listeners For Perview----}}
+{{#create-badge}}
+{{/create-badge}}
 <div class="ui stackable mobile reversed grid">
     <div class="{{if previewToggled 'ten' 'sixteen'}} wide column">
         <div class="main-container create-badge segments">
