--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -7,193 +7,193 @@
    </div>
 </div>
 <div class="ui stackable mobile reversed grid">
-   <div class="{{if previewToggled 'ten' 'sixteen'}} wide column">
-      <div class="main-container create-badge segments">
-         <div class="ui clearing segment">
-            <div class="ui form width-container">
-               <div>
-                  <div class="ui right aligned grid">
-                     <div class="left floated left aligned six wide column">
-                        <b>Name your Badges</b>
-                     </div>
-                     <div class="right floated right aligned six wide column">
-                        <div class="ui">
+    <div class="{{if previewToggled 'ten' 'sixteen'}} wide column">
+        <div class="main-container create-badge segments">
+            <div class="ui clearing segment">
+                <div class="ui form width-container">
+                    <div>
+                        <div class="ui right aligned grid">
+                            <div class="left floated left aligned six wide column">
+                                <b>Name your Badges</b>
+                            </div>
+                            <div class="right floated right aligned six wide column">
+                                <div class="ui">
+                                </div>
+                            </div>
                         </div>
-                     </div>
-                  </div>
-               </div>
-               <div class="content" style="margin-top: 10px;">
-                  <div class="center aligned">
-                     {{ data-component/name-component sendName=(action 'mutateName')}}
-                  </div>
-               </div>
+                    </div>
+                    <div class="content" style="margin-top: 10px;">
+                        <div class="center aligned">
+                            {{ data-component/name-component sendName=(action 'mutateName')}}
+                        </div>
+                    </div>
+                </div>
             </div>
-         </div>
-         <div class="ui  clearing segment">
-            <div class="ui form width-container">
-               <p>
-                  <b>Select from one of the Input Sources</b>
-                  <a class="ui right floated icon orange basic button" href="{{href-to 'user-guide'}}" target="_blank" data-tooltip="User Input Guide" data-position="right center">
-                  <i class="info icon"></i>
-                  </a>
-               </p>
-               <div class="content">
-                  <div class="center aligned">
-                     {{ data-component/csv-component sendCSV=(action 'mutateCSV') }}
-                  </div>
-               </div>
-               <div class="ui horizontal divider">
-                  Or
-               </div>
-               <div class="content">
-                  <div class="center aligned">
-                     {{ data-component/text-component sendText=(action 'mutateText') }}
-                  </div>
-               </div>
+            <div class="ui  clearing segment">
+                <div class="ui form width-container">
+                    <p>
+                        <b>Select from one of the Input Sources</b>
+                        <a class="ui right floated icon orange basic button" href="{{href-to 'user-guide'}}" data-tooltip="User Input Guide" data-position="right center">
+                            <i class="info icon"></i>
+                        </a>
+                    </p>
+                        <div class="content">
+                            <div class="center aligned">
+                                {{ data-component/csv-component sendCSV=(action 'mutateCSV') }}
+                            </div>
+                        </div>
+                          <div class="ui horizontal divider">
+                            Or
+                          </div>
+                        <div class="content">
+                            <div class="center aligned">
+                                {{ data-component/text-component sendText=(action 'mutateText') }}
+                            </div>
+                        </div>
+                </div>
             </div>
-         </div>
-      </div>
-      <div class="ui clearing segment">
-         <div class="ui form width-container">
-            <p>
-               <b>Select from one of the Paper Sizes</b>
-               &nbsp;
-            <div class="content">
-               <div class="center aligned">
-                  {{ badge-component/paper-size sendPaperSize=(action 'mutatePaperSize') }}
-               </div>
+                <div class="ui clearing segment">
+                    <div class="ui form width-container">
+                        <p>
+                            <b>Select from one of the Paper Sizes</b>
+                            &nbsp;
+                            <div class="content">
+                                <div class="center aligned">
+                                    {{ badge-component/paper-size sendPaperSize=(action 'mutatePaperSize') }}
+                                </div>
+                            </div>
+                        </p>
+                    </div>
+                <div class="ui horizontal divider"></div>
+                <div class="ui form width-container">
+                    <p>
+                        <b>Select from one of the Badge Sizes</b>
+                        <div class="ui right floated icon orange basic button" data-tooltip="Badge size is in inches, 1 inch = 2.54 cm, 1 inch = 25.4 mm" data-position="right center">
+                            <i class="info icon"></i>
+                        </div>
+                    </p>
+                    <div class="content">
+                        <div class="center aligned">
+                            {{ badge-component/badge-size sendBadgeSize=(action 'mutateBadgeSize')}}
+                        </div>
+                    </div>
+                </div>
             </div>
-            </p>
-         </div>
-         <div class="ui horizontal divider"></div>
-         <div class="ui form width-container">
-            <p>
-               <b>Select from one of the Badge Sizes</b>
-            <div class="ui right floated icon orange basic button" data-tooltip="Badge size is in inches, 1 inch = 2.54 cm, 1 inch = 25.4 mm" data-position="right center">
-               <i class="info icon"></i>
+            <div class="ui clearing segment">
+                <div class="ui form width-container">
+                    <p>
+                        <b>Select from one of the background sources</b>
+                        <a class="ui right floated icon orange basic button" data-tooltip="Best Suitable Image -> Size(width x height): 749 X 1049px & Resolution: 300 DPI"
+                            data-position="right center">
+                            <i class="info icon"></i>
+                        </a>
+                    </p>
+                    <div class="content">
+                        <div class="center aligned">
+                            {{ background-component/image-component imageData=imageData sendImage=(action 'mutateCustomImage') }}
+                        </div>
+                    </div>
+                    <div class="ui horizontal divider">
+                        Or
+                    </div>
+                    <div class="content">
+                        <div class="center aligned">
+                            {{ background-component/def-image-component defImages=defImages sendDefImage=(action 'mutateBackground') }}
+                        </div>
+                    </div>
+                    <div class="ui horizontal divider">
+                        Or
+                    </div>
+                    <div class="content">
+                        <div class="center aligned">
+                            {{ background-component/color-bg-component sendDefColor=(action 'mutateDefColor') backColor=backColor }}
+                        </div>
+                    </div>
+                </div>
             </div>
-            </p>
-            <div class="content">
-               <div class="center aligned">
-                  {{ badge-component/badge-size sendBadgeSize=(action 'mutateBadgeSize')}}
-               </div>
+            <div class="ui segment">
+                <div class="ui form width-container">
+                    <p>
+                        <b>Select from following font customizations</b>
+                    </p>
+                    <div class="ui horizontal divider"></div>
+                    <div class="content">
+                        <div class="center aligned">
+                            {{ text-component/font-color sendDefFontColor=(action 'mutateDefFontColor') fontColor=fontColor}}
+                        </div>
+                    </div>
+                    <div class="ui horizontal divider"></div>
+                    <div class="content">
+                        <div class="center aligned">
+                            {{ text-component/font-size fontsizeall=fontsizeall fonttypeall=fonttypeall sendDefSize=(action 'mutateFontSize') sendDefFont=(action 'mutateCustomFont')}}
+                        </div>
+                    </div>
+                </div>
             </div>
-         </div>
-      </div>
-      <div class="ui clearing segment">
-         <div class="ui form width-container">
-            <p>
-               <b>Select from one of the background sources</b>
-               <a class="ui right floated icon orange basic button" data-tooltip="Best Suitable Image -> Size(width x height): 749 X 1049px & Resolution: 300 DPI"
-                  data-position="right center">
-               <i class="info icon"></i>
-               </a>
-            </p>
-            <div class="content">
-               <div class="center aligned">
-                  {{ background-component/image-component imageData=imageData sendImage=(action 'mutateCustomImage') }}
-               </div>
-            </div>
-            <div class="ui horizontal divider">
-               Or
-            </div>
-            <div class="content">
-               <div class="center aligned">
-                  {{ background-component/def-image-component defImages=defImages sendDefImage=(action 'mutateBackground') }}
-               </div>
-            </div>
-            <div class="ui horizontal divider">
-               Or
-            </div>
-            <div class="content">
-               <div class="center aligned">
-                  {{ background-component/color-bg-component sendDefColor=(action 'mutateDefColor') backColor=backColor }}
-               </div>
-            </div>
-         </div>
-      </div>
-      <div class="ui segment">
-         <div class="ui form width-container">
-            <p>
-               <b>Select from following font customizations</b>
-            </p>
-            <div class="ui horizontal divider"></div>
-            <div class="content">
-               <div class="center aligned">
-                  {{ text-component/font-color sendDefFontColor=(action 'mutateDefFontColor') fontColor=fontColor}}
-               </div>
-            </div>
-            <div class="ui horizontal divider"></div>
-            <div class="content">
-               <div class="center aligned">
-                  {{ text-component/font-size fontsizeall=fontsizeall fonttypeall=fonttypeall sendDefSize=(action 'mutateFontSize') sendDefFont=(action 'mutateCustomFont')}}
-               </div>
-            </div>
-         </div>
-      </div>
-      <button {{action "submitForm"}} class="ui fluid orange {{if authToken.isEmailVerified '' 'disabled'}} button">Create Badges</button>
-      {{#each userError as |error|}}
-      <p>{{error.message}}</p>
-      {{/each}}
-      {{#if showProgress}}
-      <div class="ui hidden divider"></div>
-      <div>
-         <div class="ui centered aligned grid">{{progressState}}</div>
-         <div class="ui hidden divider"></div>
-         {{#ui-progress percent=progress class="teal indicating"}}
-         <div class="bar">
-            <div class="progress"></div>
-         </div>
-         {{/ui-progress}}
-      </div>
-      {{/if}}
-      {{#if badgeGenerated}}
-      <div class="ui positive message">
-         <i class="close icon"></i>
-         <div class="ui center aligned header">
-            Badge generated successfully!
-         </div>
-         <div class="ui horizontal divider"></div>
-         <div class="ui center aligned secondary header">
-            <a class="ui green basic button" href="{{badgeGeneratedLink}}">
-            Download as PDF
-            </a>
-         </div>
-         <script type="text/javascript">
-            $('.message .close')
-                .on('click', function () {
-                    $(this)
-                        .closest('.message')
-                        .transition('fade')
-                        ;
-                });
-         </script>
-      </div>
-      {{/if}}
-   </div>
+            <button {{action "submitForm"}} class="ui fluid orange {{if authToken.isEmailVerified '' 'disabled'}} button">Create Badges</button>
+            {{#each userError as |error|}}
+                <p>{{error.message}}</p>
+            {{/each}}
+            {{#if showProgress}}
+                <div class="ui hidden divider"></div>
+                <div>
+                    <div class="ui centered aligned grid">{{progressState}}</div>
+                    <div class="ui hidden divider"></div>
+                    {{#ui-progress percent=progress class="teal indicating"}}
+                        <div class="bar">
+                            <div class="progress"></div>
+                        </div>
+                    {{/ui-progress}}
+                </div>
+            {{/if}}
+            {{#if badgeGenerated}}
+                <div class="ui positive message">
+                    <i class="close icon"></i>
+                        <div class="ui center aligned header">
+                            Badge generated successfully!
+                        </div>
+                        <div class="ui horizontal divider"></div>
+                        <div class="ui center aligned secondary header">
+                            <a class="ui green basic button" href="{{badgeGeneratedLink}}">
+                                Download as PDF
+                            </a>
+                        </div>
+                    <script type="text/javascript">
+                        $('.message .close')
+                            .on('click', function () {
+                                $(this)
+                                    .closest('.message')
+                                    .transition('fade')
+                                    ;
+                            });
+                    </script>
+                </div>
+            {{/if}}
+        </div>
+    </div>
+    <div class="{{if previewToggled 'six' 'hide'}} wide column preview">
+        <!--Add Preview Section here-->
+        {{
+            user-component/preview
+            fn=firstName
+            ln=lastName
+            org=organization
+            sh=socialHandle
+            desg=designation
+            defColor=defFontColor
+            font_fn=defFont1Size
+            font_ln=defFont2Size
+            font_desg=defFont3Size
+            font_org=defFont4Size
+            font_sh=defFont5Size
+            defFont=defFont
+            defImageName=defImageName
+            backImg=prevImageData
+            defImage=defImage
+            custImage=custImage
+            previewHeight=previewHeight
+        }}
+    </div>
 </div>
-<div class="{{if previewToggled 'six' 'hide'}} wide column preview">
-   <!--Add Preview Section here-->
-   {{
-   user-component/preview
-   fn=firstName
-   ln=lastName
-   org=organization
-   sh=socialHandle
-   desg=designation
-   defColor=defFontColor
-   font_fn=defFont1Size
-   font_ln=defFont2Size
-   font_desg=defFont3Size
-   font_org=defFont4Size
-   font_sh=defFont5Size
-   defFont=defFont
-   defImageName=defImageName
-   backImg=prevImageData
-   defImage=defImage
-   custImage=custImage
-   previewHeight=previewHeight
-   }}
-</div>
-</div>
+
 {{overlay-welcome user=user removeFTL=(action 'removeFTL')}}
