--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -1,8 +1,9 @@
 <div class="ui stackable grid">
     <div class="right floated right aligned two wide column">
-        <button {{action 'togglePreview'}} class="tiny ui basic orange button" data-tooltip="Toggle Preview" data-position="left center">
-            <i class="exchange icon"></i>
-        </button>
+        <label class="switch" {{action 'togglePreview'}} data-tooltip="Toggle Preview" data-position="left center">
+            <input type="checkbox" class="checkswitch" checked>
+            <span class="slider round"></span>
+        </label>
     </div>
 </div>
 <div class="ui stackable mobile reversed grid">
