Fixed #1704 : Implemented Sticky Preview Functionality (#1733)
* FixingPreviewFix1704

* FixingPreviewFix1704ChangingPROD

* Fixed #1704 : Implemented Sticky Preview Functionality

--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -6,6 +6,9 @@
         </label>
     </div>
 </div>
+{{!----Event Listeners For Perview----}}
+{{#create-badge}}
+{{/create-badge}}
 <div class="ui stackable mobile reversed grid">
     <div class="{{if previewToggled 'ten' 'sixteen'}} wide column">
         <div class="main-container create-badge segments">
