FIx:1737 Adding Scroller to Permission Sections

--- a/frontend/app/templates/admin/permissions/system-roles.hbs
+++ b/frontend/app/templates/admin/permissions/system-roles.hbs
@@ -1,3 +1,4 @@
+<div class="permissions">
 <table class="ui table">
     <thead>
         <tr>
@@ -151,3 +152,4 @@
         </tr>
     </tbody>
 </table>
+</div>
