--- a/frontend/app/templates/admin/reports/list.hbs
+++ b/frontend/app/templates/admin/reports/list.hbs
@@ -11,36 +11,65 @@
     </thead>
     <tbody>
         {{#each reports as |report|}}
-            <tr>
-                <td data-sort-value={{extract-time-stamp report.id}}>{{sanitizeDate report.id}}</td>
-                <td data-sort-value={{report.mailSentCount}}>{{report.mailSentCount}}</td>
-                <td data-sort-value={{report.badgeCount}}>{{report.badgeCount}}</td>
-                <td data-sort-value={{report.badgeDeletionCount}}>{{report.badgeDeletionCount}}</td>
-                <td data-sort-value={{report.userCreationCount}}>{{report.userCreationCount}}</td>
-                <td data-sort-value={{report.userDeletionCount}}>{{report.userDeletionCount}}</td>
-            </tr>
+        <tr>
+            <td data-sort-value={{extract-time-stamp report.id}}>{{sanitizeDate report.id}}</td>
+            <td data-sort-value={{report.mailSentCount}}>{{report.mailSentCount}}</td>
+            <td data-sort-value={{report.badgeCount}}>{{report.badgeCount}}</td>
+            <td data-sort-value={{report.badgeDeletionCount}}>{{report.badgeDeletionCount}}</td>
+            <td data-sort-value={{report.userCreationCount}}>{{report.userCreationCount}}</td>
+            <td data-sort-value={{report.userDeletionCount}}>{{report.userDeletionCount}}</td>
+        </tr>
         {{/each}}
     </tbody>
     {{#if allow}}
-        <tfoot>
-            <tr>
-                <th colspan="6">
-                    <div class="ui right floated pagination menu">
-                        {{#if allow_prev}}
-                            <a class="icon item" {{action 'prevPage'}}>
-                                <i class="left chevron icon"></i>
-                            </a>
-                        {{/if}}
+    <tfoot>
+        <tr>
+            <th colspan="12" style="text-align:center">
+                <div class="ui pagination menu">
 
-                        {{#if allow_next}}
-                            <a class="icon item" {{action 'nextPage'}}>
-                                <i class="right chevron icon"></i>
-                            </a>
-                        {{/if}}
-                    </div>
-                </th>
-            </tr>
-        </tfoot>
+                    {{#if allowprevpage}}
+                    <a class="icon item" {{action 'prevpages' }}>
+                        <i class="angle double left icon"></i>
+                    </a>
+                    {{/if}}
+                    <a class="icon item" {{action 'getPage' arrayno.[0] }}>
+                        {{arrayno.[0]}}
+                    </a>
+                    <a class="icon item" {{action 'getPage' arrayno.[1] }}>
+                        {{arrayno.[1]}}
+                    </a>
+                    <a class="icon item" {{action 'getPage' arrayno.[2] }}>
+                        {{arrayno.[2]}}
+                    </a>
+                    <a class="icon item" {{action 'getPage' arrayno.[3] }}>
+                        {{arrayno.[3]}}
+                    </a>
+                    <a class="icon item" {{action 'getPage' arrayno.[4] }}>
+                        {{arrayno.[4]}}
+                    </a>
+                    <a class="icon item" {{action 'getPage' arrayno.[5] }}>
+                        {{arrayno.[5]}}
+                    </a>
+                    <a class="icon item" {{action 'getPage' arrayno.[6] }}>
+                        {{arrayno.[6]}}
+                    </a>
+                    <a class="icon item" {{action 'getPage' arrayno.[7] }}>
+                        {{arrayno.[7]}}
+                    </a>
+                    <a class="icon item" {{action 'getPage' arrayno.[8] }}>
+                        {{arrayno.[8]}}
+                    </a>
+                    <a class="icon item" {{action 'getPage' arrayno.[9] }}>
+                        {{arrayno.[9]}}
+                    </a>
+                    <a class="icon item" {{action 'nextpages' }}>
+                        <i class="angle double right icon"></i>
+                    </a>
+                </div>
+            </th>
+        </tr>
+
+    </tfoot>
     {{/if}}
 </table>
 
